# low-latency-pipeline

./: .gitignore  CMakeLists.txt  README.md  benchmarks.md
scripts/: plot_latency.py
src/common/: event.hpp  histogram.hpp  seqlock.hpp  spsc_ring.hpp
src/common/ipc/: core_shm.hpp  exchange_shm.hpp  shm.hpp  shm_segment.cpp  shm_segment.hpp
src/common/platform/: cpu_pin.hpp  spin_pause.hpp  tsc.hpp
src/core/: core.cpp  core.hpp  core_main.cpp
src/core/snapshot/: book_snapshot.hpp  book_snapshotter.hpp
src/exchange/: exchange.hpp  exchange_main.cpp
src/exchange/itch/: itch_event_types.hpp  itch_parser.cpp  itch_parser.hpp
src/manager/: manager.cpp
tests/: parse_to_orderbook.cpp  test_itch_parser.cpp  test_orderbook.cpp
